syntax = "proto3";

service ReservationService {
    rpc find(findRequest) returns (Reservation);
    rpc findAll(findRequestAll) returns (ReservationList);
}

message findRequest {
    int32 id = 1;
}

message findRequestAll {
    int32 userId = 1;
}

message Empty {}

message Reservation {
    int32 id = 1;
    int32 roomId = 2;
    int32 userId = 3;
    string dateDebut = 4;
    string dateFin = 5;
    string statut = 6;
}

message ReservationList {
    repeated Reservation reservations = 1;
}

