syntax = "proto3";

service RoomService {
    rpc find(findRequest) returns (Room);
    rpc findAll(Empty) returns (stream Room);
}

message Empty {}
message findRequest {
    int32 id = 1;
}

message Room {
    int32 id = 1;
    int32 equipementId = 2;
    string nomSalle = 3;
    string lieu = 4;
    string createdAt = 5;
    Equipment equipements = 6;
}   

message Equipment {
    int32 id = 1;
    string nomEquipement = 2;
    string description = 3;
    string dispo = 4;
}


